// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/_style/_level.vue snapshot test (/double/19) renders correctly 1`] = `
<section class="section">
  <h1 class="title">DOUBLE 19</h1>
  <div class="buttons"><a class="button is-info">
      <!----><span>
      1
    </span>
      <!---->
    </a><a class="button is-info">
      <!----><span>
      2
    </span>
      <!---->
    </a><a class="button is-info">
      <!----><span>
      3
    </span>
      <!---->
    </a><a class="button is-info">
      <!----><span>
      4
    </span>
      <!---->
    </a><a class="button is-info">
      <!----><span>
      5
    </span>
      <!---->
    </a><a class="button is-info">
      <!----><span>
      6
    </span>
      <!---->
    </a><a class="button is-info">
      <!----><span>
      7
    </span>
      <!---->
    </a><a class="button is-info">
      <!----><span>
      8
    </span>
      <!---->
    </a><a class="button is-info">
      <!----><span>
      9
    </span>
      <!---->
    </a><a class="button is-info">
      <!----><span>
      10
    </span>
      <!---->
    </a><a class="button is-info">
      <!----><span>
      11
    </span>
      <!---->
    </a><a class="button is-info">
      <!----><span>
      12
    </span>
      <!---->
    </a><a class="button is-info">
      <!----><span>
      13
    </span>
      <!---->
    </a><a class="button is-info">
      <!----><span>
      14
    </span>
      <!---->
    </a><a class="button is-info">
      <!----><span>
      15
    </span>
      <!---->
    </a><a class="button is-info">
      <!----><span>
      16
    </span>
      <!---->
    </a><a class="button is-info">
      <!----><span>
      17
    </span>
      <!---->
    </a><a class="button is-info">
      <!----><span>
      18
    </span>
      <!---->
    </a><button type="button" to="/double/19" disabled="disabled" class="button is-info is-outlined">
      <!----><span>
      19
    </span>
      <!---->
    </button></div>
  <chartlist-stub charts=""></chartlist-stub>
</section>
`;

exports[`/_style/_level.vue snapshot test (/single/19) renders correctly 1`] = `
<section class="section">
  <h1 class="title">SINGLE 19</h1>
  <div class="buttons"><a class="button is-info">
      <!----><span>
      1
    </span>
      <!---->
    </a><a class="button is-info">
      <!----><span>
      2
    </span>
      <!---->
    </a><a class="button is-info">
      <!----><span>
      3
    </span>
      <!---->
    </a><a class="button is-info">
      <!----><span>
      4
    </span>
      <!---->
    </a><a class="button is-info">
      <!----><span>
      5
    </span>
      <!---->
    </a><a class="button is-info">
      <!----><span>
      6
    </span>
      <!---->
    </a><a class="button is-info">
      <!----><span>
      7
    </span>
      <!---->
    </a><a class="button is-info">
      <!----><span>
      8
    </span>
      <!---->
    </a><a class="button is-info">
      <!----><span>
      9
    </span>
      <!---->
    </a><a class="button is-info">
      <!----><span>
      10
    </span>
      <!---->
    </a><a class="button is-info">
      <!----><span>
      11
    </span>
      <!---->
    </a><a class="button is-info">
      <!----><span>
      12
    </span>
      <!---->
    </a><a class="button is-info">
      <!----><span>
      13
    </span>
      <!---->
    </a><a class="button is-info">
      <!----><span>
      14
    </span>
      <!---->
    </a><a class="button is-info">
      <!----><span>
      15
    </span>
      <!---->
    </a><a class="button is-info">
      <!----><span>
      16
    </span>
      <!---->
    </a><a class="button is-info">
      <!----><span>
      17
    </span>
      <!---->
    </a><a class="button is-info">
      <!----><span>
      18
    </span>
      <!---->
    </a><button type="button" to="/single/19" disabled="disabled" class="button is-info is-outlined">
      <!----><span>
      19
    </span>
      <!---->
    </button></div>
  <chartlist-stub charts=""></chartlist-stub>
</section>
`;
